docs alignment issues fixed
1. code, pre tag alignment
2. next and prev links alignment in large screens
3. smooth scroll move applied for left nav
4. two components created for feedbacks buttons and subscribe button.
5. helpfull alignment make it center.

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -15,8 +15,9 @@
   }
   .helpfull{
     display: flex;
+    justify-content: center;
     .text_h2{
-      margin-left: 80px;
+      margin-left: 0;
       margin-right: 50px;
     }
     button.active {
